--- a/app/src/main/res/xml/work_manager_config.xml
+++ b/app/src/main/res/xml/work_manager_config.xml
@@ -1,4 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<configuration
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minimumLoggingLevel="INFO" />
+<configuration />
